--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-0 lg:right-0">
               <img
-                src="dist/img/aku.png"
+                src="dist/img/double.png"
                 alt="Sarief Hidayat"
                 class="max-w-full mx-auto"
               />
               <span
                 class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-120"
               >
-                <svg
+                <!-- <svg
                   width="400"
                   heigth="400"
                   viewBox="0 0 200 200"
@@ -139,7 +139,7 @@
                     d="M10.5,-19.3C12.2,-13.1,11.3,-8.3,22.6,-0.9C33.8,6.4,57.1,16.3,63.1,27.5C69.1,38.7,57.7,51.3,44.3,58.3C30.9,65.3,15.5,66.8,5.1,59.8C-5.3,52.8,-10.6,37.3,-25.4,30.7C-40.2,24.1,-64.5,26.5,-64.2,22.1C-63.9,17.7,-38.9,6.6,-30.7,-7.3C-22.6,-21.2,-31.1,-37.9,-28.8,-43.9C-26.4,-49.9,-13.2,-45.3,-4.4,-39.2C4.4,-33.1,8.7,-25.5,10.5,-19.3Z"
                     transform="translate(100 100) scale(1.1)"
                   />
-                </svg>
+                </svg> -->
               </span>
             </div>
           </div>
