slight additions and deletions in the project section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               >
             </h1>
             <h2 class="font-medium text-primary text-lg mb-5 lg:text-2xl">
-              Web Developer
+              Web Developer || UI/UX Design
             </h2>
             <p class="font-medium text-secondary mb-10">
               Welcome To My Personal Website!
@@ -270,9 +270,7 @@
             <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4">New Project</h2>
             <p class="font-medium text-mb text-secondary">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-              velit ipsam nam et, ratione eligendi repellat. Eveniet officiis in
-              quisquam!
+              This is a project that I recently made
             </p>
           </div>
         </div>
@@ -290,8 +288,10 @@
                 Coffee Shop
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Numquam laudantium, suscipit inventore eius quo nam!
+                This website is designed so that buyers who see the website are
+                immediately focused on the products being sold. This website was
+                created using HTML, CSS, and JavaScript. With a responsive
+                design for Windows or mobile
               </p>
             </div>
           </div>
@@ -306,24 +306,10 @@
                 Background Video Slider
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Numquam laudantium, suscipit inventore eius quo nam!
-              </p>
-            </div>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img
-                src="dist/img/portofolio/3.png"
-                alt="LandingPage"
-                width="w-full"
-              />
-              <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-                Landing Page
-              </h3>
-              <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Numquam laudantium, suscipit inventore eius quo nam!
+                This background slider is designed for business people who
+                provide traveling services so that the appearance of their
+                website is much better. Made using HTML, CSS, and a little
+                JavaScript for features, and is responsive on mobile devices
               </p>
             </div>
           </div>
@@ -338,8 +324,9 @@
                 Website Laundry
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Numquam laudantium, suscipit inventore eius quo nam!
+                I created this website to help a family-owned business and this
+                website is the first project I created using the help of
+                Materialize
               </p>
             </div>
           </div>
@@ -354,8 +341,11 @@
                 BookShelf
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Numquam laudantium, suscipit inventore eius quo nam!
+                This bookshelf was created as one of the tasks from the bootcamp
+                that I participated in. The features provided allow us to add
+                books that we want to read and we can mark books that have been
+                read and we can also search for books that we want, right?
+                Created using HTML, CSS, JavaScript
               </p>
             </div>
           </div>
@@ -376,9 +366,7 @@
               My Skils
             </h2>
             <p class="font-medium text-mb text-secondary">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-              velit ipsam nam et, ratione eligendi repellat. Eveniet officiis in
-              quisquam!
+              skills that I have power over
             </p>
           </div>
           <div class="flex justify-center items-center">
@@ -492,8 +480,7 @@
             <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
             <h2 class="font-bold text-dark text-3xl mb-4">Around Technology</h2>
             <p class="font-medium text-mb text-secondary">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Accusantium possimus consectetur dicta obcaecati qui quod.
+              about technological developments and the technology industry
             </p>
           </div>
         </div>
