changes to the about section

--- a/index.html
+++ b/index.html
@@ -162,9 +162,12 @@
               Get to know more!
             </h2>
             <p class="font-medium taxt-base text-secondary max-w-xl lg:text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
-              asperiores cupiditate quos, dolor maxime quas eum sapiente amet
-              repudiandae, dolore ut. Tempore, ab minima! Nisi?
+              Hello! I am Sarief Hidayat, a passionate Web Developer aspirant.
+              Even though I have just started my career journey, I am very
+              ambitious to utilize and develop my skills in web development. I
+              am always enthusiastic about learning and adapting to new
+              technology. Currently, I am looking for new opportunities that
+              will allow me to grow and contribute to this field.
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
@@ -174,8 +177,7 @@
               let's get acquainted!
             </h3>
             <p class="font-medium text-base text-secondary mb-6 lg:text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sed,
-              voluptas asperiores accusamus libero consequuntur?
+              You can see my social media to get to know more
             </p>
             <div class="flex items-center">
               <!-- Github -->
